--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
-body {
-  font-family: "Lato", sans-serif;
-}
+@use "abstracts/vars";
+@use "base/reset";
+@use "base/typography";
+@use "components/buttons";
+@use "layout/footer";
+@use "layout/grid";
+@use "layout/header";
+@use "pages/landing";
+@use "pages/home";
