--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -2,7 +2,27 @@
   width: 100%;
   height: 10vh;
   position: fixed;
+
+  &::after {
+    content: " ";
+    width: 100%;
+    top: 0;
+    left: 0;
+    position: absolute;
+    height: 10vh;
+    // background-image: linear-gradient(
+    //   to bottom,
+    //   $color-tertiary,
+    //   $color-primary
+    // );
+    // filter: blur(8px);
+    z-index: 0;
+    opacity: 999;
+    backdrop-filter: blur(5px);
+  }
   &-content {
+    z-index: 9999;
+    position: relative;
     width: 100%;
     display: flex;
     justify-content: space-between;
