--- a/sass/layout/card.scss
+++ b/sass/layout/card.scss
@@ -28,3 +28,46 @@
     }
   }
 }
+.premium__card {
+  border-radius: 5px;
+  padding: 1.5rem 2rem;
+  &-value {
+    font-size: 1.4rem;
+    color: white;
+    &-span {
+      font-size: 2rem;
+    }
+  }
+  ul {
+    list-style: none;
+    margin-top: 4rem;
+    li {
+      color: white;
+      font-size: 1.4rem;
+      margin: 1.5rem 0;
+      display: flex;
+      align-items: center;
+      i {
+        display: inline-block;
+        margin-right: 1rem;
+        font-size: 1.4em;
+      }
+    }
+  }
+  &-1 {
+    border: 3px solid $color-white;
+  }
+  &-2 {
+    padding: 3px;
+    background-image: linear-gradient(
+      to right bottom,
+      $color-tertiary,
+      $color-primary
+    );
+    &-content {
+      padding: 1.5rem 2rem;
+      background-color: $color-black-1;
+      border-radius: 3px;
+    }
+  }
+}
