--- a/sass/pages/_landing.scss
+++ b/sass/pages/_landing.scss
@@ -42,6 +42,9 @@
       height: 5rem;
     }
   }
+  .text-box {
+    margin: 2rem 0;
+  }
 }
 .banner {
   width: 100%;
@@ -56,6 +59,9 @@
   background-size: cover;
   display: flex;
   align-items: center;
+  .text-box {
+    margin: 2rem 0;
+  }
 }
 .find-music {
   width: 100%;
@@ -63,6 +69,9 @@
   height: 100vh;
   align-items: center;
   display: flex;
+  .text-box {
+    margin: 2rem 0;
+  }
 }
 .premium {
   display: flex;
@@ -70,4 +79,9 @@
   background-color: $color-black-1;
   justify-content: center;
   align-items: center;
+  .grid2 {
+    gap: 2rem;
+    margin-top: 2.5rem;
+  }
+  padding-bottom: 10rem;
 }
