--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,16 @@
     transform: translateY(0);
     opacity: 1; } }
 
+@keyframes header-ani {
+  0% {
+    transform: translateY(-10px);
+    opacity: 0;
+    z-index: 1000; }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+    z-index: 1111; } }
+
 html {
   font-size: 62.5%; }
 
@@ -43,7 +53,8 @@ body {
   opacity: 0;
   animation-fill-mode: forwards;
   position: relative;
-  z-index: 1; }
+  z-index: 1;
+  text-shadow: 0 0rem 3rem #2dcfef75; }
   .main__heading-1 {
     animation-delay: 0.2s; }
   .main__heading-2 {
@@ -66,7 +77,12 @@ body {
 
 .heading-secondary {
   font-size: 3.5rem;
-  color: #fff; }
+  color: #fff;
+  transition: all 0.5s;
+  letter-spacing: 2px;
+  text-shadow: 0 0rem 3rem #2dcfef75; }
+  .heading-secondary:hover {
+    transform: skewY(4deg) skewX(5deg); }
 
 .text-box-mini {
   font-size: 1.1rem;
@@ -105,6 +121,15 @@ body {
     padding: 1.1rem 3.1rem; }
     .btn-premium:hover {
       background-image: linear-gradient(to right, #9e32f1d5, #2dceef); }
+  .btn:hover {
+    cursor: pointer;
+    box-shadow: 0 1.5rem 1.5rem #2dcfef13; }
+
+.skewing {
+  transition: all 1s; }
+  .skewing:hover {
+    transform: skewX(-5deg) scale(1.2);
+    z-index: -11; }
 
 .grid2 {
   display: grid;
@@ -117,7 +142,8 @@ body {
 .header {
   width: 100%;
   height: 10vh;
-  position: fixed; }
+  position: fixed;
+  animation-name: header-ani; }
   .header::after {
     content: " ";
     width: 100%;
@@ -160,7 +186,7 @@ body {
 
 .premium__features {
   display: flex;
-  gap: 1rem;
+  gap: 2rem;
   margin-top: 4rem;
   margin-bottom: 7rem; }
   .premium__features-card {
@@ -170,22 +196,33 @@ body {
     justify-content: center;
     align-items: center;
     padding: 2rem 0;
-    width: 170px; }
+    width: 170px;
+    transition: all 0.5s ease;
+    box-shadow: 0 1.5rem 1.5rem #2dcfef0a; }
+    .premium__features-card:hover {
+      box-shadow: 0 1rem 3rem #2dcfef38;
+      transform: translateY(-10px); }
     .premium__features-card .text-box {
       margin: 0.5rem; }
     .premium__features-card .text-box-mini {
       margin-top: -0.5rem; }
     .premium__features-card--img {
-      padding: 1.5rem;
+      padding: 1rem;
       border-radius: 50%;
-      background-color: #3a3a3d; }
+      background-color: #252727; }
       .premium__features-card--img img {
         width: 60px;
         height: 60px; }
 
 .premium__card {
   border-radius: 5px;
-  padding: 1.5rem 2rem; }
+  padding: 1.5rem 2rem;
+  transition: all 0.5s ease;
+  box-shadow: 0 1.5rem 1.5rem #2dcfef0a;
+  margin-bottom: 1rem; }
+  .premium__card:hover {
+    box-shadow: 0 1rem 3rem #2dcfef38;
+    transform: translateY(-10px); }
   .premium__card-value {
     font-size: 1.4rem;
     color: white; }
@@ -211,7 +248,7 @@ body {
     background-image: linear-gradient(to right bottom, #2dceef, #9b2def); }
     .premium__card-2-content {
       padding: 1.5rem 2rem;
-      background-color: #161a1a;
+      background-color: #252727;
       border-radius: 3px; }
 
 .main {
@@ -286,3 +323,6 @@ body {
   .premium .grid2 {
     gap: 2rem;
     margin-top: 2.5rem; }
+    .premium .grid2__left {
+      display: flex;
+      flex-direction: column; }
