--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -14,6 +14,7 @@
   }
   position: relative;
   z-index: 1;
+  text-shadow: 0 0rem 3rem #2dcfef75;
 }
 .main_cost {
   margin-top: 1rem;
@@ -33,6 +34,12 @@
 .heading-secondary {
   font-size: 3.5rem;
   color: $color-white;
+  transition: all 0.5s;
+  letter-spacing: 2px;
+  &:hover {
+    transform: skewY(4deg) skewX(5deg);
+  }
+  text-shadow: 0 0rem 3rem #2dcfef75;
 }
 .text-box-mini {
   font-size: 1.1rem;
