--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -3,6 +3,11 @@
   height: 10vh;
   position: fixed;
 
+  animation-name: header-ani;
+  // animation-duration: 1s;
+  // animation-timing-function: linear;
+  // animation-delay: 0;
+  // animation-fill-mode: forwards;
   &::after {
     content: " ";
     width: 100%;
