--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,7 @@
 @import "base/reset";
 @import "base/typography";
 @import "components/buttons";
+@import "components/img.scss";
 
 @import "layout/footer";
 @import "layout/grid";
