--- a/sass/abstracts/animations.scss
+++ b/sass/abstracts/animations.scss
@@ -38,3 +38,13 @@
     z-index: 1111;
   }
 }
+@keyframes heading2 {
+  0% {
+    transform: translateX(-20px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
