--- a/css/style.css
+++ b/css/style.css
@@ -30,8 +30,17 @@
     opacity: 1;
     z-index: 1111; } }
 
+@keyframes heading2 {
+  0% {
+    transform: translateX(-20px);
+    opacity: 0; }
+  100% {
+    transform: translateX(0);
+    opacity: 1; } }
+
 html {
-  font-size: 62.5%; }
+  font-size: 62.5%;
+  scroll-behavior: smooth; }
 
 * {
   margin: 0;
@@ -80,7 +89,11 @@ body {
   color: #fff;
   transition: all 0.5s;
   letter-spacing: 2px;
-  text-shadow: 0 0rem 3rem #2dcfef75; }
+  text-shadow: 0 0rem 3rem #2dcfef75;
+  visibility: visible;
+  animation-name: heading2;
+  animation-duration: 1s;
+  animation-delay: 100ms; }
   .heading-secondary:hover {
     transform: skewY(4deg) skewX(5deg); }
 
@@ -109,6 +122,7 @@ body {
   text-transform: uppercase;
   font-weight: 500;
   margin: 1rem;
+  visibility: visible;
   animation-name: frombottom;
   animation-duration: 0.5s;
   animation-delay: 1.3s;
@@ -131,6 +145,65 @@ body {
     transform: skewX(-5deg) scale(1.2);
     z-index: -11; }
 
+.footer {
+  background-color: #111313;
+  padding: 5rem 0;
+  height: 270px; }
+  .footer_grid {
+    display: grid;
+    grid-template-columns: 1.3fr 1fr 1fr 1fr 3fr;
+    height: 100%;
+    gap: 4rem; }
+  .footer__logo {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between; }
+    .footer__logo_ads {
+      display: flex;
+      width: 90%;
+      justify-content: space-between;
+      color: #848484;
+      font-size: 1.2rem; }
+  .footer-link {
+    display: block;
+    color: white;
+    font-size: 1.3rem;
+    text-decoration: none;
+    margin-top: 1rem; }
+  .footer__social {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    text-align: right; }
+    .footer__social-links {
+      display: flex;
+      gap: 1rem;
+      justify-content: right; }
+      .footer__social-links-1 {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 5rem;
+        height: 5rem;
+        text-align: center;
+        background-color: #3a3a3d;
+        font-size: 2rem;
+        color: white;
+        border-radius: 50%;
+        text-decoration: none; }
+  .footer__copyrights {
+    color: #848484;
+    font-size: 1.2rem;
+    margin-top: 1rem; }
+  .footer .language {
+    background-color: transparent;
+    font-size: 1.4rem;
+    color: white;
+    border: none; }
+    .footer .language option {
+      background-color: black;
+      color: white; }
+
 .grid2 {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -143,7 +216,10 @@ body {
   width: 100%;
   height: 10vh;
   position: fixed;
-  animation-name: header-ani; }
+  animation-name: header-ani;
+  animation-duration: 1s;
+  visibility: visible;
+  animation-delay: 0; }
   .header::after {
     content: " ";
     width: 100%;
@@ -153,7 +229,7 @@ body {
     height: 10vh;
     z-index: 0;
     opacity: 999;
-    backdrop-filter: blur(5px); }
+    backdrop-filter: blur(50px); }
   .header-content {
     z-index: 9999;
     position: relative;
