--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -8,11 +8,14 @@
   text-transform: uppercase;
   font-weight: 500;
   margin: 1rem;
+  visibility: visible;
   animation-name: frombottom;
   animation-duration: 0.5s;
+
   animation-delay: 1.3s;
   opacity: 0;
   animation-fill-mode: forwards;
+
   &-premium {
     animation-delay: 1s;
     background-image: linear-gradient(to right, $color-tertiary, #9e32f1d5);
