--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -4,9 +4,11 @@
   position: fixed;
 
   animation-name: header-ani;
-  // animation-duration: 1s;
+  animation-duration: 1s;
   // animation-timing-function: linear;
-  // animation-delay: 0;
+  visibility: visible;
+  animation-delay: 0;
+
   // animation-fill-mode: forwards;
   &::after {
     content: " ";
@@ -23,7 +25,7 @@
     // filter: blur(8px);
     z-index: 0;
     opacity: 999;
-    backdrop-filter: blur(5px);
+    backdrop-filter: blur(50px);
   }
   &-content {
     z-index: 9999;
