--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -6,3 +6,13 @@
   align-items: center;
   height: 100%;
 }
+.grid3 {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 2rem;
+}
+.grid6 {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  gap: 2rem;
+}
