--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -8,7 +8,11 @@
   // animation-timing-function: linear;
   visibility: visible;
   animation-delay: 0;
-
+  display: flex;
+  align-items: center;
+  @include phone {
+    display: none;
+  }
   // animation-fill-mode: forwards;
   &::after {
     content: " ";
@@ -24,8 +28,9 @@
     // );
     // filter: blur(8px);
     z-index: 0;
-    opacity: 999;
-    backdrop-filter: blur(10px);
+    opacity: 1;
+    backdrop-filter: blur(5px);
+    // background-color: rgba(51, 51, 51, 0.651);
   }
   &-content {
     z-index: 9999;
@@ -58,6 +63,95 @@
           border: 1px solid $color-white;
           color: $color-black-1;
           background-color: $color-white;
+        }
+      }
+    }
+  }
+}
+.header2 {
+  padding: 1rem 3rem;
+  .logo2 {
+    display: flex;
+    align-items: center;
+    &__img {
+      margin-right: 2rem;
+      width: 100%;
+      display: inline-block;
+    }
+    &_link {
+      font-size: 1.6rem;
+      color: $color-grey-2;
+      margin: 0 1rem;
+      text-decoration: none;
+
+      border-radius: 30px;
+      font-weight: 500;
+      padding: 0.5rem 0;
+    }
+    .current {
+      padding: 0.5rem 2rem;
+      color: $color-secondary;
+      position: relative;
+
+      background-color: $color-black-1;
+      &::before {
+        content: "";
+        position: absolute;
+        top: -1px;
+        left: -1px;
+        height: calc(100% + 2px);
+        background-image: linear-gradient(
+          to right,
+          $color-secondary,
+          $color-primary
+        );
+
+        width: calc(100% + 2px);
+        z-index: -1;
+        border-radius: 30px;
+      }
+    }
+    &__library {
+      position: relative;
+      &::after {
+        content: "";
+        position: absolute;
+        width: 5px;
+        height: 5px;
+        border-radius: 50%;
+        background-color: $color-secondary;
+        bottom: -0.2rem;
+        left: 50%;
+        transform: translateX(-50%);
+      }
+    }
+    &__search {
+      display: flex;
+      gap: 0.4rem;
+      align-items: center;
+      .nav__search {
+        padding: 0.8rem 3rem;
+        width: 170px;
+        border: none;
+        border-radius: 3rem;
+        background-color: $color-grey-1;
+        color: white;
+        font-size: 1.5rem;
+        margin-right: 1rem;
+        &::placeholder {
+          color: $color-grey-3;
+        }
+        &:focus {
+          outline: 2px solid $color-secondary;
+        }
+      }
+      .nav_icon {
+        i {
+          font-size: 1.5rem;
+          color: white;
+          border: 1px solid white;
+          border-radius: 2rem;
+          padding: 0.5rem;
         }
       }
     }
