--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,7 +10,8 @@
 @import "layout/footer";
 @import "layout/grid";
 @import "layout/header";
-@import "layout/card.scss";
+@import "layout/card";
+@import "layout/player";
 
 @import "pages/landing";
 @import "pages/home";
