--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -10,6 +10,7 @@
   animation-delay: 0;
   display: flex;
   align-items: center;
+  z-index: 11111111;
   @include phone {
     display: none;
   }
