--- a/css/style.css
+++ b/css/style.css
@@ -162,7 +162,8 @@ body {
   animation-duration: 0.5s;
   animation-delay: 1.3s;
   opacity: 0;
-  animation-fill-mode: forwards; }
+  animation-fill-mode: forwards;
+  text-decoration: none; }
   .btn-premium {
     animation-delay: 1s;
     background-image: linear-gradient(to right, #2dceef, #9e32f1d5);
@@ -473,14 +474,14 @@ body {
   overflow: hidden;
   z-index: 0;
   border-radius: 0.6rem; }
-  .card-flow-img,
-  .card-recent-img {
+  .card-flow img,
+  .card-recent img {
     width: 100%;
     border-radius: 0.6rem;
     transition: all 0.3s ease-in;
     overflow: hidden; }
-    .card-flow-img:hover,
-    .card-recent-img:hover {
+    .card-flow img:hover,
+    .card-recent img:hover {
       transform: scale(1.3); }
 
 .card-recent-text {
@@ -503,6 +504,15 @@ body {
   text-align: center; }
   .square-card img {
     border-radius: 50%; }
+
+.card-episode {
+  display: grid;
+  grid-template-columns: 2fr 5fr;
+  align-items: center;
+  gap: 2rem; }
+  .card-episode img {
+    width: 100%;
+    border-radius: 5px; }
 
 .player {
   background-color: #303033;
@@ -728,3 +738,7 @@ body {
 
 .podcast__recently {
   padding-top: 10vh; }
+
+.btn-section {
+  text-align: center;
+  margin-top: 3rem; }
