--- a/css/style.css
+++ b/css/style.css
@@ -147,6 +147,9 @@ body {
   font-size: 1.3rem;
   color: #99999f; }
 
+.page_heading {
+  padding-top: 10vh; }
+
 .btn {
   background-color: inherit;
   padding: 1rem 3rem;
@@ -320,7 +323,7 @@ body {
     align-items: center; }
     .header2 .logo2__img {
       margin-right: 2rem;
-      width: 100%;
+      width: 100px;
       display: inline-block; }
     .header2 .logo2_link {
       font-size: 1.6rem;
@@ -401,6 +404,28 @@ body {
       bottom: -1rem;
       height: 0.3rem;
       background-image: linear-gradient(to right, #2d9bef, #9b2def); }
+
+.maping {
+  font-size: 1.6rem;
+  color: #99999f;
+  font-weight: 400;
+  margin-left: 2rem; }
+  .maping .here {
+    color: #d5d5d5; }
+
+.page_heading {
+  display: flex;
+  align-items: flex-end; }
+  .page_heading .header-page {
+    color: #d5d5d5;
+    font-size: 6.4rem;
+    margin: 0;
+    margin-right: 2rem;
+    text-shadow: 0 0 1rem #2d9bef; }
+  .page_heading .header-center {
+    margin-left: 2rem;
+    transform: translateY(-1rem);
+    font-size: 1.6rem; }
 
 .premium__features {
   display: flex;
@@ -742,3 +767,10 @@ body {
 .btn-section {
   text-align: center;
   margin-top: 3rem; }
+
+.rock-page {
+  background-color: #161a1a;
+  background-image: url(../../images/BG-rock1.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: top; }
