--- a/sass/pages/_podcast-page.scss
+++ b/sass/pages/_podcast-page.scss
@@ -10,6 +10,7 @@
   margin-top: 3rem;
 }
 .search-music {
+  margin-top: 3rem;
   display: flex;
   justify-content: space-between;
   .search-music-input {
