--- a/css/style.css
+++ b/css/style.css
@@ -997,4 +997,7 @@ body {
 .album__list-row {
   display: grid;
   grid-template-columns: 0.5fr 4fr 4fr 0.5fr 0.5fr 0.5fr;
-  margin: 1.5rem 0; }
+  margin: 0.5rem 0;
+  padding: 1rem 0; }
+  .album__list-row:hover {
+    background-color: rgba(70, 67, 67, 0.24); }
