--- a/sass/pages/_album.scss
+++ b/sass/pages/_album.scss
@@ -13,5 +13,9 @@
 .album__list-row {
   display: grid;
   grid-template-columns: 0.5fr 4fr 4fr 0.5fr 0.5fr 0.5fr;
-  margin: 1.5rem 0;
+  margin: 0.5rem 0;
+  padding: 1rem 0;
+  &:hover {
+    background-color: rgba(70, 67, 67, 0.24);
+  }
 }
