--- a/css/style.css
+++ b/css/style.css
@@ -184,6 +184,63 @@ body {
     transform: skewX(-5deg) scale(1.2);
     z-index: -11; }
 
+.create--playlist {
+  top: 0;
+  left: 0;
+  width: 100%;
+  position: absolute;
+  height: 100%;
+  background-color: rgba(10, 10, 10, 0.555);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  visibility: hidden; }
+  .create--playlist:target {
+    opacity: 1;
+    visibility: visible; }
+
+.create-content {
+  border-radius: 5px;
+  position: fixed;
+  width: 46rem;
+  height: 34rem;
+  display: flex;
+  flex-direction: column;
+  padding: 2rem;
+  background-color: #3a3a3d; }
+  .create-content-title {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 2rem;
+    font-size: 1.5rem;
+    color: #d5d5d5; }
+    .create-content-title a {
+      text-decoration: none;
+      font-size: 2rem;
+      color: #d5d5d5; }
+  .create-content input,
+  .create-content textarea {
+    background-color: transparent;
+    border: none;
+    border-bottom: 2px solid #99999f;
+    padding: 0.7rem;
+    margin-bottom: 4rem;
+    outline: none;
+    color: white;
+    font-size: 1.5rem; }
+    .create-content input:focus,
+    .create-content textarea:focus {
+      border-bottom: 2px solid #2d9bef; }
+  .create-content textarea {
+    display: inline-block;
+    width: 100%;
+    height: 300px;
+    resize: none; }
+  .create-content .btn-box {
+    display: flex;
+    justify-content: space-between; }
+
 .footer {
   background-color: #111313;
   padding: 5rem 0;
@@ -485,6 +542,15 @@ body {
   color: #99999f;
   transform: translateY(6rem); }
 
+.podcast--title {
+  position: relative; }
+  .podcast--title::after {
+    content: "+1";
+    color: #2d9bef;
+    position: absolute;
+    top: -0.7rem;
+    font-size: 1.4rem; }
+
 .premium__features {
   display: flex;
   gap: 2rem;
@@ -649,7 +715,7 @@ body {
       font-size: 2rem;
       text-align: center;
       color: white;
-      gap: 2rem; }
+      gap: 4rem; }
       .player__control-top .fa-solid {
         cursor: pointer; }
         .player__control-top .fa-solid:hover {
