--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,7 @@
 @import "base/typography";
 @import "components/buttons";
 @import "components/img.scss";
+@import "components/popup";
 
 @import "layout/footer";
 @import "layout/grid";
