--- a/sass/pages/_podcast-page.scss
+++ b/sass/pages/_podcast-page.scss
@@ -10,9 +10,10 @@
   margin-top: 3rem;
 }
 .search-music {
-  margin-top: 3rem;
+  margin-top: 5rem;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   .search-music-input {
     position: relative;
     .fa-magnifying-glass {
