--- a/css/style.css
+++ b/css/style.css
@@ -447,7 +447,7 @@ body {
   align-items: center;
   gap: 3rem; }
   .header-center-link {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     text-decoration: none;
     color: #99999f; }
   .header-center .active-page {
@@ -544,12 +544,13 @@ body {
 
 .podcast--title {
   position: relative; }
-  .podcast--title::after {
+  .podcast--title::before {
     content: "+1";
     color: #2d9bef;
     position: absolute;
-    top: -0.7rem;
-    font-size: 1.4rem; }
+    top: -1rem;
+    font-size: 1.4rem;
+    right: -1.5rem; }
 
 .premium__features {
   display: flex;
@@ -620,23 +621,21 @@ body {
 
 .card-flow,
 .card-recent {
-  overflow: hidden;
   z-index: 0;
   border-radius: 0.6rem; }
   .card-flow img,
   .card-recent img {
     width: 100%;
     border-radius: 0.6rem;
-    transition: all 0.3s ease-in;
-    overflow: hidden; }
+    transition: all 0.3s ease-in; }
     .card-flow img:hover,
     .card-recent img:hover {
-      transform: scale(1.3); }
+      transform: scale(1.1);
+      filter: brightness(0.5); }
 
 .card-recent-text {
   position: relative;
-  z-index: 111;
-  background-color: #161a1a; }
+  z-index: 111; }
 
 .card-recent-text-heading {
   color: #d5d5d5;
@@ -913,9 +912,10 @@ body {
   margin-top: 3rem; }
 
 .search-music {
-  margin-top: 3rem;
+  margin-top: 5rem;
   display: flex;
-  justify-content: space-between; }
+  justify-content: space-between;
+  align-items: center; }
   .search-music .search-music-input {
     position: relative; }
     .search-music .search-music-input .fa-magnifying-glass {
@@ -1013,10 +1013,14 @@ body {
   grid-template-columns: 0.3fr 0.5fr 4fr 4fr 4fr 1fr 0.5fr 0.5fr;
   align-items: center;
   gap: 1rem;
-  margin: 1rem 0; }
+  padding: 1rem 0.3rem;
+  border-radius: 5px;
+  transition: 400ms; }
   .playlist__list-row-title {
     font-size: 1.4rem;
     color: #99999f; }
+  .playlist__list-row:hover {
+    background-color: rgba(48, 48, 51, 0.5); }
 
 .music-number {
   text-align: center;
@@ -1047,6 +1051,13 @@ body {
   font-size: 1.5rem;
   color: white;
   text-align: center; }
+
+.add-music {
+  text-decoration: none;
+  color: #fff;
+  padding: 0.7rem 2rem;
+  border: 1px solid #fff;
+  border-radius: 3rem; }
 
 .album {
   background-color: #161a1a;
