--- a/sass/layout/_card.scss
+++ b/sass/layout/_card.scss
@@ -88,17 +88,16 @@
 }
 .card-flow,
 .card-recent {
-  overflow: hidden;
   z-index: 0;
   border-radius: 0.6rem;
   img {
     width: 100%;
     border-radius: 0.6rem;
     transition: all 0.3s ease-in;
-    overflow: hidden;
 
     &:hover {
-      transform: scale(1.3);
+      transform: scale(1.1);
+      filter: brightness(0.5);
     }
   }
 }
@@ -106,7 +105,6 @@
   &-text {
     position: relative;
     z-index: 111;
-    background-color: $color-black-1;
   }
   &-text-heading {
     color: $color-grey-3;
