--- a/sass/pages/_playlist.scss
+++ b/sass/pages/_playlist.scss
@@ -14,10 +14,15 @@
   grid-template-columns: 0.3fr 0.5fr 4fr 4fr 4fr 1fr 0.5fr 0.5fr;
   align-items: center;
   gap: 1rem;
-  margin: 1rem 0;
+  padding: 1rem 0.3rem;
+  border-radius: 5px;
+  transition: 400ms;
   &-title {
     font-size: 1.4rem;
     color: $color-grey-2;
+  }
+  &:hover {
+    background-color: rgba($color-black-2, 0.5);
   }
 }
 .music-number {
@@ -52,4 +57,11 @@
     color: white;
     text-align: center;
   }
+}
+.add-music {
+  text-decoration: none;
+  color: #fff;
+  padding: 0.7rem 2rem;
+  border: 1px solid #fff;
+  border-radius: 3rem;
 }
