--- a/css/style.css
+++ b/css/style.css
@@ -1078,3 +1078,124 @@ body {
   padding: 1rem 0; }
   .album__list-row:hover {
     background-color: rgba(70, 67, 67, 0.24); }
+
+.main__home {
+  background-color: #161a1a;
+  color: white;
+  padding-bottom: 10rem; }
+
+.container__small {
+  width: 70%;
+  margin: 0 auto; }
+
+.admin {
+  padding-top: 7rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center; }
+  .admin__info {
+    display: flex;
+    gap: 1rem;
+    align-items: center; }
+  .admin__img {
+    font-size: 5rem;
+    color: #666; }
+  .admin__about {
+    display: flex;
+    flex-direction: column;
+    font-size: 1.6rem;
+    gap: 0.5rem; }
+  .admin__text {
+    color: #929297; }
+
+.blue__btn {
+  background-image: linear-gradient(to right, #30baf4, #7255ee);
+  border: none;
+  text-transform: uppercase;
+  font-size: 1.4rem; }
+  .blue__btn:hover {
+    background-image: linear-gradient(to right, #7255ee, #30baf4); }
+
+.contact__form {
+  display: grid;
+  margin: 3rem 0;
+  grid-template-columns: repeat(6, 1fr);
+  gap: 2rem; }
+
+.contact__box {
+  display: flex;
+  flex-direction: column; }
+  .contact__box--label {
+    font-size: 1.4rem;
+    color: #929297; }
+  .contact__box--input, .contact__box--select {
+    background-color: transparent;
+    font-size: 1.6rem;
+    outline: none;
+    border: none;
+    padding: 1rem 0;
+    color: white;
+    border-bottom: 0.2rem solid #929297; }
+    .contact__box--input::placeholder, .contact__box--select::placeholder {
+      color: white;
+      font-size: 1.6rem; }
+    .contact__box--input option, .contact__box--select option {
+      color: white;
+      background-color: #161a1a;
+      border: none;
+      outline: none; }
+  .contact__box--1 {
+    grid-column: 1/4; }
+  .contact__box--2 {
+    grid-column: 4/7; }
+  .contact__box--3 {
+    grid-column: 1/7; }
+  .contact__box--4 {
+    grid-column: 1/4; }
+  .contact__box--5 {
+    grid-column: 4/7; }
+  .contact__box--6 {
+    grid-column: 1/3; }
+  .contact__box--7 {
+    grid-column: 3/5; }
+  .contact__box--8 {
+    grid-column: 5/7; }
+
+.flex__row {
+  display: flex;
+  justify-content: space-between;
+  margin: 2rem 0;
+  font-size: 1.4rem; }
+  .flex__row--text {
+    color: #929297; }
+  .flex__row--select select {
+    background-color: transparent;
+    color: aqua;
+    border: none;
+    outline: none; }
+    .flex__row--select select option {
+      background-color: transparent; }
+
+.quality__box {
+  padding: 2rem 0;
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  gap: 1rem;
+  font-size: 1.4rem;
+  color: #929297;
+  border-top: 0.1rem solid #929297;
+  border-bottom: 0.1rem solid #929297; }
+
+.account__list {
+  margin: 2rem 0; }
+  .account__list--text {
+    font-size: 1.4rem;
+    color: #929297;
+    margin: 1rem 0; }
+
+.admin__name {
+  color: white; }
+
+.title_h3 {
+  font-size: 2rem; }
