--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -7,6 +7,10 @@
     grid-template-columns: 1.3fr 1fr 1fr 1fr 3fr;
     height: 100%;
     gap: 4rem;
+    @include tablet {
+      display: flex;
+      flex-wrap: wrap;
+    }
   }
   &__logo {
     display: flex;
