--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -9,8 +9,19 @@
 /*
     ORDER: reset => Typography => general layout => grid/flex => Page Layout => components 
   */
+@mixin landscape {
+  @media (max-width: 900px) {
+    @content;
+  }
+}
+@mixin tablet {
+  @media (max-width: 750px) {
+    @content;
+  }
+}
+
 @mixin phone {
-  @media (max-width: 600px) {
+  @media (max-width: 400px) {
     @content;
   }
 }
