--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -1,6 +1,15 @@
 html {
   font-size: 62.5%;
   scroll-behavior: smooth;
+  @include landscape {
+    font-size: 50%;
+  }
+  @include tablet {
+    font-size: 45%;
+  }
+  @include phone {
+    font-size: 40%;
+  }
 }
 
 * {
